<resources>
    <string name="app_name">Resume Builder</string>
    <string name="action_settings">Settings</string>
    <string name="create_cv">Create Resume</string>
    <string name="profile">Profil</string>
    <string name="add_profile">Add Profil</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>

    <string name="edit_profil">Edit Profil</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="edit_education">Edit Education</string>
    <string name="edit_skill">Edit Skill</string>
    <string name="edit_language">Edit Language</string>
    <string name="edit_experience">Edit Experience</string>

    <string name="choose_photo">+   Choose Photo</string>
    <string name="name">Name</string>
    <string name="put_name">Enter Your Name</string>
    <string name="position">Position</string>
    <string name="put_positon">Enter Your Position</string>
    <string name="about_you">About You</string>
    <string name="put_about_you">Tell About You</string>

    <string name="phone_number">Phone Number</string>
    <string name="put_phone_number">Enter Your Phone Number</string>
    <string name="email">Email</string>
    <string name="put_email">Enter Your Email</string>
    <string name="address">Address</string>
    <string name="put_address">Enter Your Address</string>

    <string name="add_education">Add Education</string>
    <string name="add_skill">Add Skill</string>
    <string name="add_language">Add Language</string>
    <string name="add_experience">Add Experience</string>

    <string name="input_bahasa">Input Language</string>
    <string name="put_input_bahasa">Enter Your Language</string>
    <string name="choose_lvl_bahasa">Choose Level Language</string>

    <string name="company_name">Company Name</string>
    <string name="put_company_name">Enter Company Name</string>
    <string name="position_exp">Position</string>
    <string name="put_position_exp">Enter Your Position</string>
    <string name="start_working">Start Working</string>
    <string name="put_start_working">Enter Month and Year Start Working</string>
    <string name="end_working">End of Office</string>
    <string name="put_end_working">Enter Month and Year End Work</string>
    <string name="work_explanation">Job Description</string>
    <string name="put_work_explanation">Enter Job Description</string>

    <string name="school">School/University Name</string>
    <string name="put_school">Enter School/University Name</string>
    <string name="majors">Majors</string>
    <string name="put_majors">Enter Your Majors</string>
    <string name="start_school">Start Education</string>
    <string name="put_start_school">Enter Year Start Education</string>
    <string name="grad_school">Graduate</string>
    <string name="put_grad_school">Enter Year Graduate</string>
    <string name="explain_school">Explanation</string>
    <string name="put_explain_school">Enter Explanation, Exp : Certificate or GPA</string>

    <string name="skill">Skill</string>
    <string name="put_skill">Enter Your Skill</string>

    <string name="delete_conf">Confirm Delete</string>
    <string name="put_delete_conf">Are You Sure Will Delete ?</string>
    <string name="yes">YES</string>
    <string name="no">no</string>
    <string name="dialog_succ_delete">Delete Success</string>

    <string name="fill_coloms">Fill All Columns !!</string>

    <string name="choose_profile">Choose Profile</string>
    <string name="choose_template">Choose Template</string>

    <string name="next">Next</string>

    <string name="tmp1_about_me">ABOUT ME</string>
    <string name="tmp1_skill">SKILL</string>

    <string name="tmp1_exp">EXPERIENCE</string>
    <string name="tmp1_edu">EDUCATION</string>
    <string name="tmp1_lang">LANGUAGE</string>

    <string name="generate_pdf">GENERATE PDF</string>

    <string name="change_lang">Change Language</string>
    <string name="choose_lang">Choose Language</string>
    <string name="your_lang">Resume Language</string>

    <string name="choose_lang_title">Change Language</string>
    <string name="choose_lang_message">If You Change Language, Resume Will Use Language Your Choice !!</string>

    <string name="tap_exit">Please click BACK again to exit</string>

    <string name="name_resume">Resume</string>

    <string name="forbidenchar">Forbidden Character</string>
    <string name="cv_makaker">Resume Builder</string>


    <string-array name="level_bahasa">
        <item>Beginner</item>
        <item>Pre-Intermediate</item>
        <item>Intermediate</item>
        <item>Advanced</item>
        <item>Fluent</item>
    </string-array>

</resources>